# PALIAL

./: Makefile  README.md  bash_submission  block_address.h  cholesky.h  descriptor.h  main.c  populate.h  print.h  tile_address.h
exp/: plot.py
exp/data/: tasks_times_16384_512_31_userspace_syrk_trsm_to_min  tasks_times_16384_512_63_userspace_syrk_trsm_to_min  tasks_times_24576_512_31_ondemand  tasks_times_24576_512_31_userspace_syrk_trsm_to_min  tasks_times_24576_512_63_ondemand  tasks_times_24576_512_63_userspace_syrk_trsm_to_min  tasks_times_32768_512_31_userspace_syrk_trsm_to_min  tasks_times_32768_512_63_userspace_syrk_trsm_to_min  tasks_times_8192_512_31_userspace_syrk_trsm_to_min  tasks_times_8192_512_63_ondemand  tasks_times_8192_512_63_userspace_syrk_trsm_to_min
include/: common.h  descriptor.h  populate.h  print.h  tile_address.h
palial_power/: .gitignore  power.c  power.h  server.c
palial_src/: .gitignore  Makefile  main.c
palial_trace/: .gitignore  CMakeLists.txt  capture.h  log.h  palial_trace.c  palial_trace.h
runs/: tasks_times_16384_512_31_ondemand  tasks_times_16384_512_63_ondemand  tasks_times_32768_512_31_ondemand  tasks_times_32768_512_63_ondemand  tasks_times_8192_512_31_ondemand
src/: cholesky.h  common.h  lu.h  qr.h
src/srclu/: dgetrf.h  dgetrf_no_pivot.h
src/srcqr/: dgeqrt.h  dormqr.h  dpamm.h  dparfb.h  dtsmqr.h  dtsqrt.h
trace/: ompt_callbacks.c  ompt_callbacks.h  parallel_beginend.h  thread_beginend.h  thread_id.h  trace.h
